{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 188,
  "lineage": "afecc7d6-0622-da0a-f23a-b20da200e277",
  "resources": [
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "network_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ead76e842a25ae28",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-140-134-170.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.134.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "network_eip_1",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:internet-gateway/igw-0ad0cf9c3ab1f9e6e",
            "id": "igw-0ad0cf9c3ab1f9e6e",
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network IGW",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-079e140cbeda68427"
          },
          "dependencies": [
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "firewall_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:network-acl/acl-0bd4d538a5bed21b5",
            "egress": [],
            "id": "acl-0bd4d538a5bed21b5",
            "ingress": [],
            "owner_id": "600417590558",
            "subnet_ids": [
              "subnet-063aedd32ae23235e"
            ],
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Firewall private nacl",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-079e140cbeda68427"
          },
          "dependencies": [
            "module.acceptor_network.aws_subnet.network_private_subnet",
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3984712070",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bd4d538a5bed21b5",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.acceptor_network.aws_network_acl.firewall_private_nacl",
            "module.acceptor_network.aws_subnet.network_private_subnet",
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-957294143",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bd4d538a5bed21b5",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.acceptor_network.aws_network_acl.firewall_private_nacl",
            "module.acceptor_network.aws_subnet.network_private_subnet",
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "network_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-009a5b3ebe4d0b2b2",
            "owner_id": "600417590558",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network Private rt",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-079e140cbeda68427"
          },
          "dependencies": [
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0c6bd17a20ce8af",
            "route_table_id": "rtb-009a5b3ebe4d0b2b2",
            "subnet_id": "subnet-063aedd32ae23235e"
          },
          "dependencies": [
            "module.acceptor_network.aws_route_table.network_private_rt",
            "module.acceptor_network.aws_subnet.network_private_subnet",
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "network_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:security-group/sg-00fa767be69299510",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fa767be69299510",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "network_default_sg_acceptor_net",
            "name_prefix": "",
            "owner_id": "600417590558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network default sg",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-079e140cbeda68427"
          },
          "dependencies": [
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "network_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:subnet/subnet-063aedd32ae23235e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-063aedd32ae23235e",
            "map_public_ip_on_launch": false,
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network private subnet az1",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-079e140cbeda68427"
          },
          "dependencies": [
            "module.acceptor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptor_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:vpc/vpc-079e140cbeda68427",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e37db3a29b73d16f",
            "default_route_table_id": "rtb-051b31cb5efcb3cfd",
            "default_security_group_id": "sg-0a47cabdf1cd5af61",
            "dhcp_options_id": "dopt-c4844eaf",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079e140cbeda68427",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-051b31cb5efcb3cfd",
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network VPC",
              "Network": "Acceptor Network",
              "Project": "terraform demo"
            }
          }
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "network_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c1f2fff71324a389",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-138-252-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.252.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "network_eip_1",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:internet-gateway/igw-04853667c1c68cc05",
            "id": "igw-04853667c1c68cc05",
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network IGW",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-00aafa0276f6b3d63"
          },
          "dependencies": [
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "firewall_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:network-acl/acl-06d5ac0112b20a9f1",
            "egress": [],
            "id": "acl-06d5ac0112b20a9f1",
            "ingress": [],
            "owner_id": "600417590558",
            "subnet_ids": [
              "subnet-0b30de8e400ec9bda"
            ],
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Firewall private nacl",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-00aafa0276f6b3d63"
          },
          "dependencies": [
            "module.requestor_network.aws_subnet.network_private_subnet",
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1762158056",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06d5ac0112b20a9f1",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.requestor_network.aws_network_acl.firewall_private_nacl",
            "module.requestor_network.aws_subnet.network_private_subnet",
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-248157740",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06d5ac0112b20a9f1",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.requestor_network.aws_network_acl.firewall_private_nacl",
            "module.requestor_network.aws_subnet.network_private_subnet",
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "network_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0566194ad1f3a6b17",
            "owner_id": "600417590558",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network Private rt",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-00aafa0276f6b3d63"
          },
          "dependencies": [
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014d72f039fffc9af",
            "route_table_id": "rtb-0566194ad1f3a6b17",
            "subnet_id": "subnet-0b30de8e400ec9bda"
          },
          "dependencies": [
            "module.requestor_network.aws_route_table.network_private_rt",
            "module.requestor_network.aws_subnet.network_private_subnet",
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "network_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:security-group/sg-04d52f52f1008dbdf",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d52f52f1008dbdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "network_default_sg_requestor_net",
            "name_prefix": "",
            "owner_id": "600417590558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network default sg",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aafa0276f6b3d63"
          },
          "dependencies": [
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "network_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:subnet/subnet-0b30de8e400ec9bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b30de8e400ec9bda",
            "map_public_ip_on_launch": false,
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network private subnet az1",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            },
            "vpc_id": "vpc-00aafa0276f6b3d63"
          },
          "dependencies": [
            "module.requestor_network.aws_vpc.network_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.requestor_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600417590558:vpc/vpc-00aafa0276f6b3d63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e63fc3d7e2479d5a",
            "default_route_table_id": "rtb-0f763e389cdfba533",
            "default_security_group_id": "sg-0c03aa45f6a7a6390",
            "dhcp_options_id": "dopt-c4844eaf",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00aafa0276f6b3d63",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f763e389cdfba533",
            "owner_id": "600417590558",
            "tags": {
              "Author": "Leon Mwandiringa",
              "Environment": "Development",
              "Name": "Network VPC",
              "Network": "Requestor Network",
              "Project": "terraform demo"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "data",
      "type": "aws_vpc",
      "name": "acceptor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_peering",
      "mode": "data",
      "type": "aws_vpc",
      "name": "requestor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "acceptor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requestor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_network_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}